fix padding on mobile register view

--- a/assets/less/responsive/mobile/basic/body.less
+++ b/assets/less/responsive/mobile/basic/body.less
@@ -169,8 +169,4 @@ body {
 	.notificationWrap {
 		margin-bottom: 40px;
 	}
-
-	&:not(.registerView) {
-		padding-top: 50px;
-	}
 }
