--- a/assets/less/responsive/mobile/views/register.less
+++ b/assets/less/responsive/mobile/views/register.less
@@ -13,6 +13,9 @@
 	#content {
 		height: 100%;
 	}
+	#container {
+		padding-top: 0;
+	}
 	#main {
 		text-align: center;
 		max-height: auto !important;
